customized some parts of the startpage

--- a/index.html
+++ b/index.html
@@ -23,37 +23,19 @@
     <section id="header">
       <h1 id="header-time">00:00</h1>
       <h2 id="header-date">Date</h2>
-      <div id="header-quote">Thinking</div>
+      <div id="header-quote">Hello Shahabaz</div>
       <div class="randompic"> </div>
     </section>
     <section id="apps">
       <h3>> Frequent Websites</h3>
       <div id="apps-container">
-        <a id="link" class="apps-item" href="https://facebook.com/">
+        <a id="link" class="apps-item" href="https://reddit.com/">
           <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-facebook"></span>
+            <span class="iconify icon" data-icon="mdi-reddit"></span>
           </div>
           <div class="apps-text">
-            <span>Facebook</span>
-            <span>facebook.com</span>
-          </div>
-        </a>
-		<a id="link" class="apps-item" href="https://www.instagram.com/">
-          <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-instagram"></span>
-          </div>
-          <div class="apps-text">
-            <span>Instagram</span>
-            <span>instagram.com</span>
-          </div>
-        </a>
-        <a id="link" class="apps-item" href="https://twitter.com/">
-          <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-twitter"></span>
-          </div>
-          <div class="apps-text">
-            <span>Twitter</span>
-            <span>twitter.com</span>
+            <span>Reddit</span>
+            <span>reddit.com</span>
           </div>
         </a>
         <a id="link" class="apps-item" href="https://www.youtube.com/">
@@ -65,31 +47,22 @@
             <span>youtube.com</span>
           </div>
         </a>
-        <a id="link" class="apps-item" href="https://www.twitch.tv/">
-          <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-twitch"></span>
-          </div>
-          <div class="apps-text">
-            <span>Twitch</span>
-            <span>twitch.tv</span>
-          </div>
-        </a>
         <a id="link" class="apps-item" href="https://mail.google.com/mail/u/0/">
           <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-google"></span>
+            <span class="iconify icon" data-icon="mdi-gmail"></span>
           </div>
           <div class="apps-text">
             <span>Gmail</span>
             <span>gmail.com</span>
           </div>
         </a>
-        <a class="apps-item" onclick="location.href='https://discordapp.com/channels/@me';">
+        <a id="link" class="apps-item" href="https://calendar.google.com/">
           <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-discord"></span>
+            <span class="iconify icon" data-icon="uil:calender"></span>
           </div>
           <div class="apps-text">
-            <span>Discord</span>
-            <span>discordapp.com</span>
+            <span>Calendar</span>
+            <span>calendar.google.com</span>
           </div>
         </a>
         <a id="link" class="apps-item" href="https://github.com/">
@@ -101,31 +74,13 @@
             <span>github.com</span>
           </div>
         </a>
-        <a id="link" class="apps-item" href="https://www.spotify.com">
+        <a id="link" class="apps-item" href="https://open.spotify.com">
           <div class="apps-icon">
             <span class="iconify icon" data-icon="mdi-spotify"></span>
           </div>
           <div class="apps-text">
             <span>Spotify</span>
             <span>spotify.com</span>
-          </div>
-        </a>
-        <a id="link" class="apps-item" href="https://protonmail.com/login">
-          <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-at"></span>
-          </div>
-          <div class="apps-text">
-            <span>Protonmail</span>
-            <span>protonmail.com</span>
-          </div>
-        </a>
-        <a id="link" class="apps-item" href="https://www.netflix.com/">
-          <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-netflix"></span>
-          </div>
-          <div class="apps-text">
-            <span>Netflix</span>
-            <span>netflix.com</span>
           </div>
         </a>
         <a id="link" class="apps-item" href="https://stackoverflow.com/">
@@ -143,28 +98,30 @@
       <a id="togglebookmarks"><h3>> Bookmarks</h3></a>
       <div id="links-container">
         <div class="links-item">
-          <h4>University</h4>
+          <h4>Study</h4>
           <a id="link" href="https://">Moodle</a>
           <a id="link" href="https://">Timetable</a>
           <a id="link" href="https://">Teams</a>
         </div>
         <div class="links-item">
-          <h4>Chitchat</h4>
-          <a id="link" href="https://telegram.com/">Telegram</a>
+          <h4>Social</h4>
           <a id="link" href="https://www.whatsapp.com/">WhatsApp</a>
-          <a id="link" href="https://www.messenger.com/">Messenger</a>
+          <a id="link" href="https://www.xing.com/">Xing</a>
+          <a id="link" href="http://www.linkedin.com/">LinkedIn</a>
         </div>
         <div class="links-item">
-          <h4>4chan</h4>
-          <a id="link" href="https://boards.4channel.org/wsg/">/wsg/ - Worksafe GIF</a>
-          <a id="link" href="https://boards.4channel.org/lit/">/lit/ - Literature</a>
-          <a id="link" href="https://boards.4channel.org/g/">/g/ - Technology</a>
+          <h4>Shopping</h4>
+          <a id="link" href="https://flipkart.com">flipkart</a>
+          <a id="link" href="http://www.amazon.de/">amazon</a>
+          <a id="link" href="http://www.vipon.com/">vipon</a>
         </div>
         <div class="links-item">
           <h4>Reddit</h4>
 		      <a id="link" href="https://www.reddit.com/r/wallpapers">r/wallpapers</a>
           <a id="link" href="https://www.reddit.com/r/startpages">r/startpages</a>
           <a id="link" href="https://www.reddit.com/r/unixporn">r/unixporn</a>
+          <a id="link" href="https://www.reddit.com/r/india">r/india</a>
+          <a id="link" href="https://www.reddit.com/r/worldnews">r/worldnews</a>
         </div>
         <div class="links-item">
           <h4>Art</h4>
@@ -176,12 +133,18 @@
           <h4>Finance</h4>
           <a id="link" href="https://">Bank</a>
           <a id="link" href="https://paypal.com/">PayPal</a>
+          <div id="hiddenbookmarks" style="display: none;">
+            <a id="link" href="https://">AlternativeTo</a>
+            <a id="link" href="https://">Imdb</a>
+            <a id="link" href="https://linustechtips.com/main/">LTT</a>
+          </div>
         </div>
         <div class="links-item">
-          <h4>Web Hosting</h4>
-          <a id="link" href="https://">Website</a>
-          <a id="link" href="https://">VPS</a>
-          <a id="link" href="https://www.namecheap.com/">NameCheap</a>
+          <h4>Tools</h4>
+          <a id="link" href="https://www.dropbox.com/">Dropbox</a>
+          <a id="link" href="https://smallpdf.com/">small pdf</a>
+          <a id="link" href="https://regex101.com/">Regex</a>
+          <a id="link" href="http://www.online-convert.com/">Online Converter</a>
         </div>
         <div class="links-item">
           <h4>Other</h4>
