added almost all the sections which I want and every section now have hidden link function

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="randompic"> </div>
     </section>
     <section id="apps">
-      <h3>> Frequent Websites</h3>
+      <h3>Frequent Websites</h3>
       <div id="apps-container">
         <a id="link" class="apps-item" href="https://reddit.com/">
           <div class="apps-icon">
@@ -95,25 +95,28 @@
       </div>
     </section>
     <section id="links">
-      <a id="togglebookmarks"><h3>> Bookmarks</h3></a>
+      <h3>Bookmarks</h3>
       <div id="links-container">
         <div class="links-item">
           <h4>Study</h4>
-          <a id="link" href="https://">Moodle</a>
-          <a id="link" href="https://">Timetable</a>
-          <a id="link" href="https://">Teams</a>
+          <a id="link" href="http://www.thefouriertransform.com/">FourierTx</a>
+          <a id="link" href="http://fourier-series.com/">Fourier Series</a>
+          <a id="link" href="https://www.coursera.org/">Coursera</a>
+          <a id="link" href="https://www.udemy.com/">Udemy</a>
         </div>
         <div class="links-item">
           <h4>Social</h4>
-          <a id="link" href="https://www.whatsapp.com/">WhatsApp</a>
+          <a id="link" href="https://web.whatsapp.com/">WhatsApp</a>
           <a id="link" href="https://www.xing.com/">Xing</a>
           <a id="link" href="http://www.linkedin.com/">LinkedIn</a>
         </div>
         <div class="links-item">
           <h4>Shopping</h4>
-          <a id="link" href="https://flipkart.com">flipkart</a>
-          <a id="link" href="http://www.amazon.de/">amazon</a>
-          <a id="link" href="http://www.vipon.com/">vipon</a>
+          <a id="link" href="https://flipkart.com">Flipkart</a>
+          <a id="link" href="http://www.amazon.de/">Amazon</a>
+          <a id="link" href="http://www.vipon.com/">Vipon</a>
+          <a id="link" href="https://geizhals.de/">Geizhals DE</a>
+          <a id="link" href="http://www.mindfactory.de/">Mindfactory</a>
         </div>
         <div class="links-item">
           <h4>Reddit</h4>
@@ -124,19 +127,22 @@
           <a id="link" href="https://www.reddit.com/r/worldnews">r/worldnews</a>
         </div>
         <div class="links-item">
-          <h4>Art</h4>
-          <a id="link" href="https://">DeviantArt</a>
-          <a id="link" href="https://">Artsy</a>
-          <a id="link" href="https://">Patreon</a>
+          <a id="media"><h4>media</h4></a>
+          <a id="link" href="http://gaana.com/radio/meethi-mirchi">Gaana</a>
+          <div id="hiddenmedia" style="display: none;">
+            <a id="link" href="https://lookmovie.ag/">Look Movie</a>
+            <a id="link" href="https://fmovies.wtf/">Fmovies</a>
+            <a id="link" href="https://www.hindilinks4u.to/">Hindi Links</a>
+            <a id="link" href="https://fmovies.wtf/">Fmovies</a>
+          </div>
         </div>
         <div class="links-item">
-          <h4>Finance</h4>
-          <a id="link" href="https://">Bank</a>
-          <a id="link" href="https://paypal.com/">PayPal</a>
-          <div id="hiddenbookmarks" style="display: none;">
-            <a id="link" href="https://">AlternativeTo</a>
-            <a id="link" href="https://">Imdb</a>
-            <a id="link" href="https://linustechtips.com/main/">LTT</a>
+          <a id="docs"><h4>docs</h4></a>
+          <a id="link" href="https://docs.google.com/spreadsheets/">G Sheets</a>
+          <a id="link" href="https://docs.google.com/document/">G Docs</a>
+          <a id="link" href="https://keep.google.com/">Keep</a>
+          <div id="hiddendocs" style="display: none;">
+            <a id="link" href="https://www.sharelatex.com/">ShareLatex</a>
           </div>
         </div>
         <div class="links-item">
@@ -147,18 +153,12 @@
           <a id="link" href="http://www.online-convert.com/">Online Converter</a>
         </div>
         <div class="links-item">
-          <h4>Other</h4>
+          <a id="other"><h4>Other</h4></a>
           <a id="link" href="https://imgur.com/">Imgur</a>
           <a id="link" href="https://www.color-hex.com/">Color-Hex</a>
           <a id="link" href="https://"></a>
-        </div>
-        <div id="hiddenbookmarks" style="display: none;">
-          <div class="links-item">
-            <h4>Forums</h4>
-            <a id="link" href="https://">AlternativeTo</a>
-            <a id="link" href="https://">Imdb</a>
-            <a id="link" href="https://linustechtips.com/main/">LTT</a>
-          </div>
+        <div id="hiddenother" style="display: none;">
+          <a id="link" href="https://linustechtips.com/main/">LTT</a>
         </div>
       </div>
     </section>
