--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
             <span>stackoverflow.com</span>
           </div>
         </a>
+	<a id="link" class="apps-item" href="https://www.deepl.com/translator">
+          <div class="apps-icon">
+            <span class="iconify icon" data-icon="mdi-translate"></span>
+          </div>
+          <div class="apps-text">
+            <span>Translator</span>
+            <span>deepl.com</span>
+          </div>
+        </a>
       </div>
     </section>
     <section id="links">
