--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 -->
 <html>
 <head>
-  <title>New Tab</title>
+  <title>Startpage</title>
   <meta charset="utf-8"/>
   
   <link rel="shortcut icon" href="./assets/img/fav.png"/>
