--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="header">
       <h1 id="header-time">00:00</h1>
       <h2 id="header-date">Date</h2>
-      <div id="header-quote">Hello Shahabaz</div>
+      <div id="header-quote">Hello!</div>
     </section>
     <section id="apps">
       <h3>~>Frequent Websites</h3>
