--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span>calendar.google.com</span>
           </div>
         </a>
-        <a id="link" class="apps-item" href="https://github.com/shahabaz-B">
+        <a id="link" class="apps-item" href="https://github.com/falconsb">
           <div class="apps-icon">
             <span class="iconify icon" data-icon="mdi-github"></span>
           </div>
@@ -82,13 +82,40 @@
             <span>spotify.com</span>
           </div>
         </a>
-        <a id="link" class="apps-item" href="https://stackoverflow.com/">
+        <a id="link" class="apps-item" href="https://web.whatsapp.com/">
           <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-stackoverflow"></span>
+            <span class="iconify icon" data-icon="mdi-whatsapp"></span>
           </div>
           <div class="apps-text">
-            <span>overflow</span>
-            <span>stackoverflow.com</span>
+            <span>whatsapp</span>
+            <span>web.whatsapp.com</span>
+          </div>
+        </a>
+        <a id="link" class="apps-item" href="https://outlook.office365.com/">
+          <div class="apps-icon">
+            <span class="iconify icon" data-icon="mdi-outlook"></span>
+          </div>
+          <div class="apps-text">
+            <span>outlook</span>
+            <span>outlook.office365.com </span>
+          </div>
+        </a>
+        <a id="link" class="apps-item" href="https://teams.microsoft.com/">
+          <div class="apps-icon">
+            <span class="iconify icon" data-icon="mdi-teams"></span>
+          </div>
+          <div class="apps-text">
+            <span>teams</span>
+            <span>teams.microsoft.com </span>
+          </div>
+        </a>
+        <a id="link" class="apps-item" href="https://finance.yahoo.com/">
+          <div class="apps-icon">
+            <span class="iconify icon" data-icon="mdi-yahoo"></span>
+          </div>
+          <div class="apps-text">
+            <span>yahoo</span>
+            <span>finance.yahoo.com</span>
           </div>
         </a>
 	<a id="link" class="apps-item" href="https://www.deepl.com/translator">
@@ -122,7 +149,6 @@
         
         <div class="links-item">
           <a id="social"><h4>Social</h4></a>
-          <a id="link" href="https://web.whatsapp.com/">WhatsApp</a>
           <a id="link" href="https://www.xing.com/">Xing</a>
           <a id="link" href="http://www.linkedin.com/">LinkedIn</a>
           <div id="hiddensocial" style="display: none;">
@@ -142,7 +168,7 @@
         
         <div class="links-item">
           <a id="reddit"><h4>Reddit</h4></a>
-		      <a id="link" href="https://www.reddit.com/r/wallpapers">r/wallpapers</a>
+		      <a id="link" href="https://www.reddit.com/r/wallstreetbets">r/wallstreetbets</a>
           <a id="link" href="https://www.reddit.com/r/india">r/india</a>
           <a id="link" href="https://www.reddit.com/r/worldnews">r/worldnews</a>
           <div id="hiddenreddit" style="display: none;">
