--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </a>
         <a id="link" class="apps-item" href="https://teams.microsoft.com/">
           <div class="apps-icon">
-            <span class="iconify icon" data-icon="mdi-teams"></span>
+            <span class="iconify icon" data-icon="mdi-microsoft-teams"></span>
           </div>
           <div class="apps-text">
             <span>teams</span>
@@ -118,13 +118,22 @@
             <span>finance.yahoo.com</span>
           </div>
         </a>
-	<a id="link" class="apps-item" href="https://www.deepl.com/translator">
+    	  <a id="link" class="apps-item" href="https://www.deepl.com/translator">
           <div class="apps-icon">
             <span class="iconify icon" data-icon="mdi-translate"></span>
           </div>
           <div class="apps-text">
             <span>Translator</span>
             <span>deepl.com</span>
+          </div>
+        </a>
+    	  <a id="link" class="apps-item" href="https://www.monkeytype.com">
+          <div class="apps-icon">
+            <span class="iconify icon" data-icon="emojione-monotone:see-no-evil-monkey"></span>
+          </div>
+          <div class="apps-text">
+            <span>monkeytpe</span>
+            <span>monkeytype.com</span>
           </div>
         </a>
       </div>
