adds preview image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <span>calendar.google.com</span>
           </div>
         </a>
-        <a id="link" class="apps-item" href="https://github.com/falconsb">
+        <a id="link" class="apps-item" href="https://github.com/shahabaz-bagwan">
           <div class="apps-icon">
             <span class="iconify icon" data-icon="mdi-github"></span>
           </div>
