--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <span>deepl.com</span>
           </div>
         </a>
-    	  <a id="link" class="apps-item" href="https://www.keybr.com">
+    	  <a id="link" class="apps-item" href="https://www.monkeytype.com">
           <div class="apps-icon">
             <span class="iconify icon" data-icon="emojione-monotone:see-no-evil-monkey"></span>
           </div>
           <div class="apps-text">
-            <span>keybr</span>
-            <span>keybr.com</span>
+            <span>monkeytype</span>
+            <span>monkeytype.com</span>
           </div>
         </a>
       </div>
